force-app/main/default/objects/Desk_Shifts__c/Desk_Shifts__c.object-meta.xml
<CustomObject>
    <label>משמרות כוננים</label>
    <nameField>
        <displayFormat>S-{000000}</displayFormat>
        <label>משמרות כוננים Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>משמרות כוננים</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>