force-app/main/default/objects/Desk_Shifts__c/fields/Employee_and_Shift__c.field-meta.xml
<CustomField>
    <fullName>Employee_and_Shift__c</fullName>
    <formula>TEXT(Employee_Shift__c)&amp;&quot; - &quot;&amp; TEXT(Shift_Type__c ) &amp;&quot; - &quot;&amp; MID(TEXT(Shift_start_time__c + 120/1440 ),12,8)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>כונן ומשמרת</label>
    <type>Text</type>
</CustomField>