force-app/main/default/objects/Desk_Shifts__c/fields/Employee_Shift__c.field-meta.xml
<CustomField>
    <fullName>Employee_Shift__c</fullName>
    <label>כונן במשמרת</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>אור</fullName>
            </value>
            <value>
                <fullName>אלכס בורלקה</fullName>
            </value>
            <value>
                <fullName>אנסטסיה</fullName>
            </value>
            <value>
                <fullName>גדעון</fullName>
            </value>
            <value>
                <fullName>גיא</fullName>
            </value>
            <value>
                <fullName>גיא רוטליג&apos;</fullName>
            </value>
            <value>
                <fullName>דן דיפורטו</fullName>
            </value>
            <value>
                <fullName>חן ביתן</fullName>
            </value>
            <value>
                <fullName>יואב מגנוס</fullName>
            </value>
            <value>
                <fullName>ים</fullName>
                <isActive>false</isActive>
                <label>ים</label>
            </value>
            <value>
                <fullName>יסמין</fullName>
            </value>
            <value>
                <fullName>נוי חיקין</fullName>
            </value>
            <value>
                <fullName>נועה</fullName>
            </value>
            <value>
                <fullName>נועם פז</fullName>
            </value>
            <value>
                <fullName>ניצן בן סימון</fullName>
            </value>
            <value>
                <fullName>ספיר</fullName>
            </value>
            <value>
                <fullName>סתיו</fullName>
            </value>
            <value>
                <fullName>עמית</fullName>
            </value>
            <value>
                <fullName>ענבל</fullName>
            </value>
            <value>
                <fullName>קווין</fullName>
            </value>
            <value>
                <fullName>רון</fullName>
            </value>
            <value>
                <fullName>רון לביא</fullName>
            </value>
            <value>
                <fullName>רוני</fullName>
            </value>
            <value>
                <fullName>תום</fullName>
                <isActive>false</isActive>
                <label>תום</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>