force-app/main/default/objects/Desk_Shifts__c/fields/Shift_Date__c.field-meta.xml
<CustomField>
    <fullName>Shift_Date__c</fullName>
    <label>תאריך משמרת</label>
    <type>Date</type>
</CustomField>