force-app/main/default/objects/Desk_Shifts__c/fields/Shift_end_time__c.field-meta.xml
<CustomField>
    <fullName>Shift_end_time__c</fullName>
    <formula>CASE (Shift_Type__c ,
&quot;בוקר&quot;,
(Shift_start_time__c + 540/1440),
&quot;ערב&quot;,
(Shift_start_time__c + 450/1440),
&quot;לילה&quot;,
(Shift_start_time__c + 450/1440),
(Shift_start_time__c + 1)
)</formula>
    <label>זמן סיום משמרת</label>
    <type>DateTime</type>
</CustomField>