force-app/main/default/objects/Desk_Shifts__c/fields/Shift_Type__c.field-meta.xml
<CustomField>
    <fullName>Shift_Type__c</fullName>
    <label>סוג משמרת</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>בוקר</fullName>
            </value>
            <value>
                <fullName>ערב</fullName>
            </value>
            <value>
                <fullName>לילה</fullName>
            </value>
            <value>
                <fullName>סוף שבוע</fullName>
            </value>
            <value>
                <fullName>Supervisor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>