force-app/main/default/objects/Desk_Shifts__c/fields/Start_time_Presentation__c.field-meta.xml
<CustomField>
    <fullName>Start_time_Presentation__c</fullName>
    <formula>CASE( Shift_Type__c ,
&quot;בוקר&quot;,
DATETIMEVALUE(
TEXT(YEAR(Shift_Date__c))+&quot;-&quot; + 
TEXT(MONTH(Shift_Date__c))+&quot;-&quot; +
TEXT(DAY(Shift_Date__c))+ &quot; &quot; + &quot;11:00:00&quot;),
&quot;ערב&quot;,
DATETIMEVALUE(
TEXT(YEAR(Shift_Date__c))+&quot;-&quot; + 
TEXT(MONTH(Shift_Date__c))+&quot;-&quot; +
TEXT(DAY(Shift_Date__c))+ &quot; &quot; + &quot;12:00:00&quot;),
&quot;לילה&quot;,
DATETIMEVALUE(
TEXT(YEAR(Shift_Date__c  ))+&quot;-&quot; + 
TEXT(MONTH(Shift_Date__c  ))+&quot;-&quot; +
TEXT(DAY(Shift_Date__c ))+ &quot; &quot; + &quot;13:00:00&quot;),
&quot;Supervisor&quot;,
DATETIMEVALUE(
TEXT(YEAR(Shift_Date__c  ))+&quot;-&quot; + 
TEXT(MONTH(Shift_Date__c  ))+&quot;-&quot; +
TEXT(DAY(Shift_Date__c ))+ &quot; &quot; + &quot;10:00:00&quot;),
DATETIMEVALUE(
TEXT(YEAR(Shift_Date__c))+&quot;-&quot; + 
TEXT(MONTH(Shift_Date__c))+&quot;-&quot; +
TEXT(DAY(Shift_Date__c))+ &quot; &quot; + &quot;11:00:00&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start time Presentation</label>
    <type>DateTime</type>
</CustomField>