force-app/main/default/objects/Desk_Shifts__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee_Shift__c</columns>
    <columns>Shift_Type__c</columns>
    <columns>Shift_start_time__c</columns>
    <columns>Shift_end_time__c</columns>
    <columns>Employee_and_Shift__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>