force-app/main/default/objects/Desk_Shifts__c/listViews/Super_viser.listView-meta.xml
<ListView>
    <fullName>Super_viser</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Shift_Type__c</field>
        <operation>equals</operation>
        <value>Supervisor</value>
    </filters>
    <label>Supervisor</label>
</ListView>