force-app/main/default/objects/Desk_Shifts__c/listViews/View.listView-meta.xml
<ListView>
    <fullName>View</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Shift_Type__c</field>
        <operation>equals</operation>
        <value>בוקר,ערב,לילה,סוף שבוע</value>
    </filters>
    <label>משמרות - כוננים</label>
</ListView>