force-app/main/default/objects/Desk_Shifts__c/listViews/View1.listView-meta.xml
<ListView>
    <fullName>View1</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Employee_Shift__c</field>
        <operation>equals</operation>
        <value>גדעון</value>
    </filters>
    <label>גדעון</label>
</ListView>