force-app/main/default/objects/Desk_Shifts__c/listViews/View10.listView-meta.xml
<ListView>
    <fullName>View10</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>אור</label>
</ListView>