force-app/main/default/objects/Desk_Shifts__c/listViews/View11.listView-meta.xml
<ListView>
    <fullName>View11</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Employee_and_Shift__c</field>
        <operation>equals</operation>
        <value>אור</value>
    </filters>
    <label>אור</label>
</ListView>