force-app/main/default/objects/Desk_Shifts__c/listViews/View2.listView-meta.xml
<ListView>
    <fullName>View2</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Employee_Shift__c</field>
        <operation>equals</operation>
        <value>אנסטסיה</value>
    </filters>
    <label>משמרות - אנסטסיה</label>
</ListView>