force-app/main/default/objects/Desk_Shifts__c/listViews/View3.listView-meta.xml
<ListView>
    <fullName>View3</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Employee_Shift__c</field>
        <operation>equals</operation>
        <value>יסמין</value>
    </filters>
    <label>יסמין</label>
</ListView>