force-app/main/default/objects/Desk_Shifts__c/listViews/View4.listView-meta.xml
<ListView>
    <fullName>View4</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Employee_Shift__c</field>
        <operation>equals</operation>
        <value>יואב מגנוס</value>
    </filters>
    <label>יואב</label>
</ListView>