force-app/main/default/objects/Desk_Shifts__c/listViews/View5.listView-meta.xml
<ListView>
    <fullName>View5</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Employee_Shift__c</field>
        <operation>equals</operation>
        <value>נוי חיקין</value>
    </filters>
    <label>נוי</label>
</ListView>