force-app/main/default/objects/Desk_Shifts__c/listViews/View6.listView-meta.xml
<ListView>
    <fullName>View6</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Employee_Shift__c</field>
        <operation>equals</operation>
        <value>עמית</value>
    </filters>
    <label>עמית</label>
</ListView>