force-app/main/default/objects/Desk_Shifts__c/listViews/View7.listView-meta.xml
<ListView>
    <fullName>View7</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Employee_Shift__c</field>
        <operation>equals</operation>
        <value>רוני</value>
    </filters>
    <label>רוני</label>
</ListView>