force-app/main/default/objects/Desk_Shifts__c/listViews/View8.listView-meta.xml
<ListView>
    <fullName>View8</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Employee_Shift__c</field>
        <operation>equals</operation>
        <value>ענבל</value>
    </filters>
    <label>ענבל</label>
</ListView>